# aws-otel-js-instrumentation

./: .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  THIRD-PARTY-LICENSES  eslint.config.js  lerna.json  package-lock.json  package.json  prettier.config.js  release-artifacts-metadata.json  release-build-metadata.json  tsconfig.base.json
.github/: CODEOWNERS
aws-distro-opentelemetry-autoinstrumentation/: .eslintignore  .eslintrc.js  README.md  package-lock.json  package.json  tsconfig.json
aws-distro-opentelemetry-node-autoinstrumentation/: .eslintignore  README.md  (+4 more)
contract-tests/images/mock-collector/: Dockerfile  README.md  mock_collector_client.py  mock_collector_logs_service.py  mock_collector_metrics_service.py  mock_collector_server.py  mock_collector_service.py  mock_collector_service_pb2.py  mock_collector_service_pb2.pyi  mock_collector_service_pb2_grpc.py  mock_collector_trace_service.py  pyproject.toml  requirements.txt
contract-tests/images/mock-collector/protos/: mock_collector_service.proto
contract-tests/tests/: pyproject.toml
contract-tests/tests/test/amazon/aws-sdk/: aws_sdk_test.py
contract-tests/tests/test/amazon/base/: contract_test_base.py  database_contract_test_base.py
contract-tests/tests/test/amazon/di/: di_contract_test_base.py  express_test.py
contract-tests/tests/test/amazon/http/: http_test.py
contract-tests/tests/test/amazon/lambda_lite_sdk/: lite_sdk_test.py
contract-tests/tests/test/amazon/misc/: configuration_test.py  resource_attributes_test_base.py  service_name_in_env_var_test.py  service_name_in_resource_attributes_test.py  unknown_service_name_test.py
contract-tests/tests/test/amazon/mongodb/: mongodb_test.py
contract-tests/tests/test/amazon/mongoose/: mongoose_test.py
contract-tests/tests/test/amazon/mysql2/: mysql2_test.py
contract-tests/tests/test/amazon/requests/: requests_test.py
contract-tests/tests/test/amazon/serviceevents/: express_test.py  fastify_test.py  profiler_test.py  serviceevents_contract_test_base.py
contract-tests/tests/test/amazon/utils/: application_signals_constants.py
(+455 files in other folders)
