[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mock-collector"
description = "Mock Collector used by contract tests for AWS OTEL Python Instrumentation"
version = "1.0.0"
license = "Apache-2.0"
requires-python = ">=3.8"

dependencies = [
    "grpcio ~= 1.76.0",
    "opentelemetry-proto == 1.39.1",
    "opentelemetry-sdk == 1.39.1",
    "protobuf==6.33.5",
    "typing-extensions==4.15.0"
]

[tool.hatch.build.targets.sdist]
include = ["*.py"]

[tool.hatch.build.targets.wheel]
include = ["*.py"]
